Prepare dish controller

--- a/src/API.MenuPlanner/appsettings.json
+++ b/src/API.MenuPlanner/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "MenuPlannerDatabase": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "MenuPlanner",
+    "DishesCollectionName": "Dishes"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
