--- a/src/API.MenuPlanner/appsettings.json
+++ b/src/API.MenuPlanner/appsettings.json
@@ -2,7 +2,8 @@
   "MenuPlannerDatabase": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "MenuPlanner",
-    "DishesCollectionName": "Dishes"
+    "DishesCollectionName": "Dishes",
+    "RecipeCollectionName": "Recipes"
   },
 
   "Logging": {
