--- a/src/API.MenuPlanner/appsettings.json
+++ b/src/API.MenuPlanner/appsettings.json
@@ -1,7 +1,13 @@
 {
   "MenuPlannerDatabase": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "MenuPlanner",
+    "DatabaseName": "MenuPlanner"
+  },
+
+  "Authentication": {
+    "JwtKey": "PRIVATE_KEY_DONT_SHARE",
+    "JwtExpireSeconds": 100000,
+    "JwtIssuer": "http://menuplannerapi.com"
   },
 
   "Logging": {
