--- a/src/API.MenuPlanner/appsettings.json
+++ b/src/API.MenuPlanner/appsettings.json
@@ -6,7 +6,7 @@
 
   "Authentication": {
     "JwtKey": "PRIVATE_KEY_DONT_SHARE",
-    "JwtExpireSeconds": 10,
+    "JwtExpireSeconds": 10000000,
     "JwtIssuer": "http://menuplannerapi.com"
   },
 
