--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Build
       run: dotnet build "./src/API.MenuPlanner.sln" --no-restore
     - name: Test
-      run: dotnet test "./src/API.MenuPlanner.sln" --no-build --verbosity normal
+      run: dotnet test "./src/Api.MenuPlannerTest/Api.MenuPlannerTest.csproj" --no-build --verbosity normal
