--- a/src/API.MenuPlanner/appsettings.json
+++ b/src/API.MenuPlanner/appsettings.json
@@ -1,6 +1,8 @@
 {
   "MenuPlannerDatabase": {
-    "ConnectionString": "mongodb+srv://Ritharn:f5JKFd2HH68Dwxr@cluster0.vhzlnec.mongodb.net/test",
+    //"ConnectionString": "mongodb+srv://Ritharn:f5JKFd2HH68Dwxr@cluster0.vhzlnec.mongodb.net/test",
+    //"ConnectionString": "mongodb://mongo:27017",
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "MenuPlanner"
   },
 
