--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,9 +17,5 @@ jobs:
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 6.0.x
-    - name: Restore dependencies
-      run: dotnet restore "./src"
-    - name: Build
-      run: dotnet build "./src" --no-restore
     - name: Test
-      run: dotnet test "./src" --verbosity normal
+      run: docker-compose run --rm test
