add docker compose tests

--- a/src/API.MenuPlanner/API.MenuPlanner.csproj
+++ b/src/API.MenuPlanner/API.MenuPlanner.csproj
@@ -17,4 +17,16 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.19.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="..\.dockerignore" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="..\.dockerignore" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="..\.dockerignore" />
+  </ItemGroup>
+
 </Project>
