--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,4 +18,4 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Test
-      run: docker-compose run --rm test
+      run: docker-compose run --rm test test
